auto concatenation support